tests/snapshots/yaml_suite_snapshots__yaml_suite_6VJK_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.15. Folded newlines are preserved for "more indented" and blank lines
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761056"
  tags: spec folded scalar 1.3-err
  yaml: ">\n Sammy Sosa completed another\n fine season with great stats.\n\n   63 Home Runs\n   0.28…"
  tree: "+STR\n +DOC\n  =VAL >Sammy Sosa completed another fine season with great stats.\\n\\n  63 H…"
  json: "Sammy Sosa completed another fine season with great stats.\n\n  63 Home Runs\n  0.288…
  dump: ">\n  Sammy Sosa completed another fine season with great stats.\n\n    63 Home Runs\n    0…"
