tests/snapshots/yaml_suite_snapshots__yaml_suite_6VJK_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ">\n  Sammy Sosa completed another fine season with great stats.\n\n    63 Home Runs\n    0.288 Batting Average\n\n  What a year!\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761056"
  json: "\"Sammy Sosa completed another fine season with great stats.\\n\\n  63 Home Runs\\n  0.288 Batting Average\\n\\nWhat a year!\\n\"\n"
  name: Spec Example 2.15. Folded newlines are preserved for "more indented" and blank lines
  tags: spec folded scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL >Sammy Sosa completed another fine season with great stats.\\n\\n  63 Home Runs\\n  0.288 Batting Average\\n\\nWhat a year!\\n\n -DOC\n-STR\n"
  yaml: ">\n Sammy Sosa completed another\n fine season with great stats.\n\n   63 Home Runs\n   0.288 Batting Average\n\n What a year!\n"
